# ml-tutorial

./: README.md  env.yaml  requirements.txt
001_download_dataset/: download_dataset.ipynb
003_visualize_simple/: visualize_simple.ipynb
004_calc_descriptors/: calc_descriptors.ipynb
005_simple_regression/: simple_regression.ipynb
006_hyper_parameter_optim/: hyper_parameter_optim.ipynb
007_select_feature_by_std_cv/: select_feature_by_std_cv.ipynb
008_remove_multi_colinearlity/: remove_multi_colinearlity.ipynb
009_compare_model/: compare_models.ipynb
010_hyper_param_opt_bayes/: hyper_param_opt_bayes.ipynb
011_virtual_library/: virtual_library_brics.ipynb
012_visualize_advanced/: plotly.ipynb  raincloud_beeswarm.ipynb
013_feature_engineering/: dimension_reduction.ipynb  feature_tools.ipynb
014_crawl_molecule_property/: pubchempy.ipynb  similarity_search.ipynb
015_molgan/: molgan.ipynb
016_automl/: pycaret.ipynb
017_shap/: shap.ipynb
018_symbolic_regression/: symbolic_regression.ipynb
019_symbolic_regression_chemical_kinetics/: symbolic_regression_reaction_kinetics.ipynb
025_gpr/: gpr.ipynb
045_molecule_3d/: README.md  analysis.ipynb  autogluon.ipynb  create_dataset.py  evaluate.py  evaluate_ood.py  freesolv_dimenet.csv  freesolv_dimenetpp.csv  freesolv_schnet.csv  molecule_3d_common.ipynb  pyproject.toml  results.csv  results_ood_dG.csv  results_random.csv  schnet.py  schnet_embedding.py
045_molecule_3d/molformer/: Dockerfile  molformer_embedding.py
045_molecule_3d/pyg/: Dockerfile  pyg_gnn.py  pyg_gnn_embedding.py  requirements.txt
(+208 files in other folders)
